# grainpit

./: .containerignore  .gitignore  Cargo.toml  Containerfile  README.md  compose.yml
src/: main.rs  markov.rs  markov1.txt  markov2.txt  markov3.txt  markov4.txt
